--- a/webapp/frontend/public/index.html
+++ b/webapp/frontend/public/index.html
@@ -1,25 +1,11 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend</title>
+    <title>Simple Web App</title>
   </head>
   <body>
-    <button onclick="fetchData()">Fetch Data from Backend</button>
-    <div id="result"></div>
-
-    <script>
-      async function fetchData() {
-        try {
-          const response = await fetch('http://localhost:8080');
-          const data = await response.text();
-          document.getElementById('result').innerText = data;
-        } catch (error) {
-          console.error('Error fetching data:', error);
-        }
-      }
-    </script>
+    <div id="root"></div>
   </body>
 </html>
